# fetcher

./: .gitignore  Cargo.toml  Dockerfile  grafana_lambda.json  init.sql  readme.md
.github/workflows/: build_docker.yml  docker-image.yml
migration/: main.ts  package-lock.json  package.json  result.json
src/: client.rs  influxdb.rs  main.rs  mapper.rs  postgres_client.rs
src/entity/: heatpump.rs  mod.rs  prelude.rs  temperature_data.rs
src/models/: mod.rs  model_iobroker.rs  model_lambda.rs  model_pv.rs  model_temperature.rs
