[package]
name = "fetcherRS"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"]}
thiserror = "2.0.3"
backoff = { version = "0.4", features = ["tokio"] }
tracing = "0.1"
chrono = "0.4.38"
influxdb2 = { version = "0.5.2" , features = ["default"] }
futures = "0.3.30"