[package]
name = "fetcherRS"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
serde_json = "1.0.132"
strum = "0.27.1"
strum_macros = "0.27.1"
chrono = "0.4.38"
rust_decimal = { version= "1.37.1" , features= ["db-tokio-postgres"]}
postgres-types = "0.2.9"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json","with-time" ] }